# spherediff

./: LICENSE.txt  README.md  pyproject.toml
src/spherediff/: coeffs.py  kernel.py  poly.py  sample.py  score.py
src/spherediff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spherediff/__pycache__/: coeffs.get_cheby_coeffs-42.py311.1.nbc  coeffs.get_cheby_coeffs-42.py311.2.nbc  coeffs.get_cheby_coeffs-42.py311.nbi  coeffs.get_cheby_coeffs-42.py38.1.nbc  coeffs.get_cheby_coeffs-42.py38.2.nbc  coeffs.get_cheby_coeffs-42.py38.nbi  coeffs.get_cheby_coeffs-44.py38.1.nbc  coeffs.get_cheby_coeffs-44.py38.2.nbc  coeffs.get_cheby_coeffs-44.py38.nbi  coeffs.get_coeffs_recursive-19.py311.1.nbc  coeffs.get_coeffs_recursive-19.py311.2.nbc  coeffs.get_coeffs_recursive-19.py311.nbi  coeffs.get_coeffs_recursive-19.py38.1.nbc  coeffs.get_coeffs_recursive-19.py38.2.nbc  coeffs.get_coeffs_recursive-19.py38.nbi  coeffs.get_coeffs_recursive-21.py38.1.nbc  coeffs.get_coeffs_recursive-21.py38.2.nbc  coeffs.get_coeffs_recursive-21.py38.nbi  kernel.angle_mean-94.py38.1.nbc  kernel.angle_mean-94.py38.nbi  kernel.angle_mean-96.py311.1.nbc  kernel.angle_mean-96.py311.nbi  kernel.angle_mean-96.py38.1.nbc  kernel.angle_mean-96.py38.nbi  kernel.kernel-3.py311.1.nbc  kernel.kernel-3.py311.nbi  kernel.kernel-3.py38.1.nbc  kernel.kernel-3.py38.nbi  kernel.kernel-5.py38.1.nbc  kernel.kernel-5.py38.2.nbc  kernel.kernel-5.py38.nbi  poly.chebyshev_first_inv_matrix-16.py311.1.nbc  poly.chebyshev_first_inv_matrix-16.py311.nbi  poly.chebyshev_first_inv_matrix-16.py38.1.nbc  (+19 more)
