# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherediff"
version = "1.2.2"
description = "Sample from the diffusion kernel on any n-sphere"
readme = "README.md"
authors = [{name = "Rian Kormos", email = "Rian.Kormos@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python", 
    "Programming Language :: Python :: 3",
]
keywords = ["diffusion", "hypersphere", "sampling"]
dependencies = [
    "numpy >= 1.18.0",
    "numba >= 0.47.0", 
    "scipy >= 1.4.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/rckormos/SphereDiff"
